--- a/src/app/componentes/rkmain/addrkp/addrkp.component.html
+++ b/src/app/componentes/rkmain/addrkp/addrkp.component.html
@@ -3,10 +3,11 @@
     <div class="row">
         <div class="col-xl-7">
             <mat-form-field>
-                <mat-label>Seleccione un Proceso</mat-label>
-                <mat-select [formControl]="procesoControl" required [(ngModel)]="procesoModel.procesoId" #procesoId multiple>
+                <!-- <mat-label>Seleccione un Proceso</mat-label> -->
+                <mat-select [formControl]="procesoControl" required placeholder="Seleccione un Proceso" [(ngModel)]="procesoModel.procesoId" #procesoId multiple>
                     <!-- <input  matInput focused="'true'"    style="height: 18px;" (keydown)="Buscar($event)" type="text" [(ngModel)]="procesoModel.name" value={{procesoModel.name}} name='name' placeholder="search"> -->
-                    <input type="text" class="form-control" placeholder="Buscar" [(ngModel)]="descripcion" name="descripcion">
+                    <ngx-mat-select-search [formControl]="bankMultiFilterCtrl" [placeholderLabel]="'Buscar'" [noEntriesFoundLabel]="'Not Found...'" [(ngModel)]="descripcion" name="descripcion"></ngx-mat-select-search>
+
                     <mat-option *ngFor="let item of procesosList| filterPipe:descripcion" (keydown)="$event.stopPropagation()" [value]="item.Id">{{item.Descripcion}}</mat-option>
                 </mat-select>
                 <!-- <mat-error *ngIf="procesoControl.hasError('required')">No ha seleccionado un Proceso</mat-error> -->
