--- a/src/app/componentes/rkmain/addrkr/addrkr.component.html
+++ b/src/app/componentes/rkmain/addrkr/addrkr.component.html
@@ -3,10 +3,11 @@
     <div class="row">
         <div class="col-xl-7">
             <mat-form-field>
-                <mat-label>Seleccione un Riesgo</mat-label>
-                <mat-select [formControl]="riesgoControl" required [(ngModel)]="riesgoModel.riesgoId" #riesgoId multiple>
+
+                <mat-select [formControl]="riesgoControl" placeholder="Seleccione un Riesgo" required [(ngModel)]="riesgoModel.riesgoId" #riesgoId multiple>
                     <!-- <input  matInput focused="'true'"   style="height: 18px;" (keydown)="Buscar($event)"  type="text" [(ngModel)]="riesgoModel.name" value={{riesgoModel.name}} name='name' placeholder="search"> -->
-                    <input type="text" class="form-control" placeholder="Buscar" [(ngModel)]="descripcion" name="descripcion">
+                    <ngx-mat-select-search [formControl]="bankMultiFilterCtrl" [placeholderLabel]="'Buscar'" [noEntriesFoundLabel]="'Not Found...'" [(ngModel)]="descripcion" name="descripcion"></ngx-mat-select-search>
+
                     <mat-option *ngFor="let item of riesgosList |filterPipe:descripcion" (keydown)="$event.stopPropagation()" [value]="item.Id">{{item.Descripcion}}</mat-option>
                 </mat-select>
                 <!-- <mat-error *ngIf="riesgoControl.hasError('required')">No ha seleccionado un Riesgo</mat-error> -->
