--- a/src/app/componentes/rkmain/addrkt/addrkt.component.html
+++ b/src/app/componentes/rkmain/addrkt/addrkt.component.html
@@ -3,10 +3,11 @@
     <div class="row">
         <div class="col-xl-7">
             <mat-form-field>
-                <mat-label>Seleccione una Tarea</mat-label>
-                <mat-select [formControl]="tareaControl" required [(ngModel)]="tareaModel.tareaId" #tareaId multiple>
+                <!-- <mat-label>Seleccione una Tarea</mat-label> -->
+                <mat-select [formControl]="tareaControl" placeholder="Seleccione una Tarea" required [(ngModel)]="tareaModel.tareaId" #tareaId multiple>
                     <!-- <input  matInput focused="'true'"  type="text"   (keydown)="Buscar($event)"  style="height: 18px;" [(ngModel)]="tareaModel.name" value={{tareaModel.name}} name='name' placeholder="search"> -->
-                    <input type="text" class="form-control" placeholder="Buscar" [(ngModel)]="descripcion" name="descripcion">
+                    <ngx-mat-select-search [formControl]="bankMultiFilterCtrl" [placeholderLabel]="'Buscar'" [noEntriesFoundLabel]="'Not Found...'" [(ngModel)]="descripcion" name="descripcion"></ngx-mat-select-search>
+
 
                     <mat-option *ngFor="let item of tareasList|filterPipe:descripcion" (keydown)="$event.stopPropagation()" [value]="item.Id">{{item.Descripcion}}</mat-option>
                 </mat-select>
