--- a/src/app/componentes/rkmain/addrky/addrky.component.html
+++ b/src/app/componentes/rkmain/addrky/addrky.component.html
@@ -3,10 +3,11 @@
     <div class="row">
         <div class="col-xl-7">
             <mat-form-field>
-                <mat-label>Seleccione una Consecuencia</mat-label>
-                <mat-select [formControl]="consecuenciaControl" required [(ngModel)]="consecuenciaModel.consecuenciaId" #consecuenciaId multiple>
+                <!-- <mat-label>Seleccione una Consecuencia</mat-label> -->
+                <mat-select [formControl]="consecuenciaControl" placeholder="Seleccione una Consecuencia" required [(ngModel)]="consecuenciaModel.consecuenciaId" #consecuenciaId multiple>
                     <!-- <input  matInput   id='busqueda '  style="height: 18px;"   (keydown)="Buscar($event)" type="text" [(ngModel)]="consecuenciaModel.name" name='name' value={{consecuenciaModel.name}} placeholder="search"> -->
-                    <input type="text" class="form-control" placeholder="Buscar" [(ngModel)]="descripcion" name="descripcion">
+                    <ngx-mat-select-search [formControl]="bankMultiFilterCtrl" [placeholderLabel]="'Buscar'" [noEntriesFoundLabel]="'Not Found...'" [(ngModel)]="descripcion" name="descripcion"></ngx-mat-select-search>
+
                     <mat-option *ngFor="let item of consecuenciasList|filterPipe:descripcion" [value]="item.Id">{{item.Descripcion}}</mat-option>
                 </mat-select>
                 <!-- <mat-error *ngIf="consecuenciaControl.hasError('required')">No ha seleccionado una Consecuencia</mat-error> -->
