--- a/src/app/componentes/rkmain/rkmain.component.html
+++ b/src/app/componentes/rkmain/rkmain.component.html
@@ -52,7 +52,7 @@
         </button>
 
 
-                    <ng-template [ngIf]="fix ==='YN'" [ngIfElse]="Lectura">
+                    <!-- <ng-template [ngIf]="fix ==='YN'" [ngIfElse]="Lectura">
 
                         <ng-template [ngIf]="Activo ==='004' || Activo ==='007' || Activo ==='008'" [ngIfElse]="Permitido">
                             <button id="SinPermisos" [style.display]='enviar' class="btn btn-sm btn-light btn-round" (click)="sendValidate()" disabled>
@@ -76,7 +76,7 @@
                         <button [style.display]='enviar' class="btn btn-sm btn-light btn-round" (click)="sendValidate()" disabled>
                 <img class="img-circle" src="assets/images/Send.png" style="width: 10px; height: 10px;" title="Envio a Validar">
             </button>
-                    </ng-template>
+                    </ng-template> -->
 
 
 
@@ -270,6 +270,8 @@
                                         </ng-template>
                                     </div>
                                     <div *ngSwitchDefault>
+
+
                                         <button [style.display]='AgregarNodo' class="btn btn-sm btn-light btn-round" (click)="nuevo(node)">
                                         <img   class="img-circle" src="assets/images/Add.png" style="width: 10px; height: 10px; ">
                                         </button>
