Eliminacion Boton Envio a Validar del Arbol

--- a/src/app/componentes/rkmain/rkmain.component.html
+++ b/src/app/componentes/rkmain/rkmain.component.html
@@ -51,7 +51,7 @@
         <img class="img-circle"  title="Mostrar Leyenda" src="assets/images/Help.png" style="width: 10px; height: 10px;" >
         </button>
 
-
+                    <!-- Boton ENvio A Validar-->
                     <!-- <ng-template [ngIf]="fix ==='YN'" [ngIfElse]="Lectura">
 
                         <ng-template [ngIf]="Activo ==='004' || Activo ==='007' || Activo ==='008'" [ngIfElse]="Permitido">
