validacion dependiendo del status del padre terminada, se debe mostrar u ocultar los botones de accion dependiendo de el statuts del padre vs hijo

--- a/src/app/componentes/rkmain/rkr/rkr.component.html
+++ b/src/app/componentes/rkmain/rkr/rkr.component.html
@@ -2,61 +2,68 @@
 <div class="col-xl-12 text-right" align="end" [ngSwitch]="riesgoModel.riesgoStatus">
 
 
-    <div *ngSwitchCase="'CREADO'">
+    < <div *ngSwitchCase="'CREADO'">
 
-        <mat-dialog-actions *ngIf="btn === creacion || btn === administrador || btn === validacionaprobacion|| btn === creacionvalidacion || btn ===  validacion || btn === creacionaprobacion " align="end" cdkDragHandle>
+        <mat-dialog-actions *ngIf="btn === creacion && permisoValidar  || btn === administrador && permisoValidar || btn === validacionaprobacion && permisoValidar|| btn === creacionvalidacion && permisoValidar || btn ===  validacion && permisoValidar || btn === creacionaprobacion && permisoValidar "
+            align="end" cdkDragHandle>
             <button mat-raised-button color="accent" (click)="consola('aprobar')">Enviar a Validar</button>
         </mat-dialog-actions>
-    </div>
-    <div *ngSwitchCase="'PENDIENTE INACTIVACION'">
+</div>
+<div *ngSwitchCase="'PENDIENTE INACTIVACION'">
 
-         <button *ngIf="btn === creacionvalidacion || btn === validacion || btn == creacionvalidacion || btn === validacionaprobacion || btn === administrador" mat-raised-button color="accent" (click)="consola('validaraprobar')">Validar</button>
-            <button *ngIf="btn === creacionvalidacion || btn === validacion || btn == creacionvalidacion || btn === validacionaprobacion || btn === administrador" mat-raised-button color="warn" (click)="consola('rechazar')"> Rechazar</button>
-    </div>
+    <button *ngIf="btn === creacionvalidacion && permisoValidar || btn === validacion && permisoValidar || btn == creacionvalidacion && permisoValidar || btn === validacionaprobacion && permisoValidar || btn === administrador && permisoValidar" mat-raised-button
+        color="accent" (click)="consola('validaraprobar')">Validar</button>
+    <button *ngIf="btn === creacionvalidacion && permisoValidar || btn === validacion && permisoValidar || btn == creacionvalidacion && permisoValidar || btn === validacionaprobacion && permisoValidar || btn === administrador && permisoValidar" mat-raised-button
+        color="warn" (click)="consola('rechazar')"> Rechazar</button>
 
-    <div *ngSwitchCase="'MODIFICADO'">
+</div>
 
-        <mat-dialog-actions *ngIf="btn === creacion || btn === administrador || btn === validacionaprobacion|| btn === creacionvalidacion || btn ===  validacion || btn === creacionaprobacion " align="end" cdkDragHandle>
-            <button mat-raised-button color="accent" (click)="consola('aprobar')">Enviar a Validar</button>
-        </mat-dialog-actions>
-    </div>
-    <div *ngSwitchCase="'ENVIADO A VALIDACION'">
-        <mat-dialog-actions align="end">
+<div *ngSwitchCase="'MODIFICADO'">
 
-            <button *ngIf="btn === creacionvalidacion || btn === validacion || btn == creacionvalidacion || btn === validacionaprobacion || btn === administrador" mat-raised-button color="accent" (click)="consola('validaraprobar')">Validar</button>
-            <button *ngIf="btn === creacionvalidacion || btn === validacion || btn == creacionvalidacion || btn === validacionaprobacion || btn === administrador" mat-raised-button color="warn" (click)="consola('rechazar')"> Rechazar</button>
+    <mat-dialog-actions *ngIf="btn === creacion  && permisoValidar|| btn === administrador  && permisoValidar|| btn === validacionaprobacion && permisoValidar|| btn === creacionvalidacion && permisoValidar || btn ===  validacion && permisoValidar || btn === creacionaprobacion && permisoValidar "
+        align="end" cdkDragHandle>
+        <button mat-raised-button color="accent" (click)="consola('aprobar')">Enviar a Validar</button>
+    </mat-dialog-actions>
+</div>
+<div *ngSwitchCase="'ENVIADO A VALIDACION'">
+    <mat-dialog-actions align="end">
 
-        </mat-dialog-actions>
-    </div>
+        <button *ngIf="btn === creacionvalidacion && permisoValidar || btn === validacion && permisoValidar || btn == creacionvalidacion && permisoValidar|| btn === validacionaprobacion && permisoValidar || btn === administrador && permisoValidar" mat-raised-button
+            color="accent" (click)="consola('validaraprobar')">Validar</button>
+        <button *ngIf="btn === creacionvalidacion && permisoValidar || btn === validacion && permisoValidar || btn == creacionvalidacion && permisoValidar || btn === validacionaprobacion && permisoValidar || btn === administrador && permisoValidar" mat-raised-button
+            color="warn" (click)="consola('rechazar')"> Rechazar</button>
 
-    <div *ngSwitchCase="'PENDIENTE DE APROBACION'">
-        <mat-dialog-actions align="end">
-            <button *ngIf="btn === aprobacion || btn === validacionaprobacion || btn === creacionaprobacion || btn === administrador" mat-raised-button color="accent" (click)="consola('validaraprobar')">Aprobar</button>
-            <button *ngIf="btn === aprobacion || btn === validacionaprobacion  || btn === creacionaprobacion|| btn === administrador" mat-raised-button color="warn" (click)="consola('rechazar')">Rechazar</button>
-        </mat-dialog-actions>
+    </mat-dialog-actions>
+</div>
 
-    </div>
-    <!-- <div *ngSwitchCase="'RECHAZADO'">
+<div *ngSwitchCase="'PENDIENTE DE APROBACION'">
+    <mat-dialog-actions align="end">
+        <button *ngIf="btn === aprobacion && permisoValidar || btn === validacionaprobacion && permisoValidar || btn === creacionaprobacion  && permisoValidar|| btn === administrador && permisoValidar" mat-raised-button color="accent" (click)="consola('validaraprobar')">Aprobar</button>
+        <button *ngIf="btn === aprobacion && permisoValidar || btn === validacionaprobacion  && permisoValidar || btn === creacionaprobacion && permisoValidar|| btn === administrador && permisoValidar" mat-raised-button color="warn" (click)="consola('rechazar')">Rechazar</button>
+    </mat-dialog-actions>
+
+</div>
+<!--<div *ngSwitchCase="'RECHAZADO'">
 
         <mat-dialog-actions align="end" cdkDragHandle>
 
             <button *ngIf="btn === creacion || btn === administrador || btn === validacionaprobacion|| btn === creacionvalidacion || btn === creacionaprobacion" mat-raised-button color="accent" (click)="consola('archivar')">Archivar</button>
             <button *ngIf="btn === creacion || btn === administrador || btn === validacionaprobacion|| btn === creacionvalidacion || btn === creacionaprobacion" mat-raised-button color="primary" (click)="consola('restaurar')">Restaurar</button>
-            
+            <!-- <button *ngIf="btn === creacion || btn === administrador || btn === validacionaprobacion|| btn === creacionvalidacion" mat-raised-button color="accent" (click)="consola()">Re</button> -->
 
 
-        </mat-dialog-actions>
 
-    </div> -->
+<!-- </mat-dialog-actions> -->
 
-    <div *ngSwitchCase="'ENVIADO A APROBACION'">
-        <mat-dialog-actions align="end">
+<!-- </div> -->
 
-            <button *ngIf="btn === aprobacion || btn === validacionaprobacion || btn === creacionaprobacion || btn === administrador" mat-raised-button color="accent" (click)="consola('validaraprobar')">Aprobar</button>
-            <button *ngIf="btn === aprobacion || btn === validacionaprobacion  || btn === creacionaprobacion|| btn === administrador" mat-raised-button color="warn" (click)="consola('rechazar')">Rechazar</button>
-        </mat-dialog-actions>
-    </div>
+<div *ngSwitchCase="'ENVIADO A APROBACION'">
+    <mat-dialog-actions align="end">
 
+        <button *ngIf="btn === aprobacion && permisoValidar || btn === validacionaprobacion && permisoValidar || btn === creacionaprobacion && permisoValidar || btn === administrador && permisoValidar" mat-raised-button color="accent" (click)="consola('validaraprobar')">Aprobar</button>
+        <button *ngIf="btn === aprobacion  && permisoValidar|| btn === validacionaprobacion  && permisoValidar || btn === creacionaprobacion && permisoValidar|| btn === administrador && permisoValidar" mat-raised-button color="warn" (click)="consola('rechazar')">Rechazar</button>
+    </mat-dialog-actions>
+</div>
 </div>
 <br>
 
@@ -187,7 +194,7 @@
     </div>
 
     <div class="col-xl-12" *ngIf="btn !== 'lectura' ">
-        <div class="box box-default table-box table-responsive mdl-shadow--2dp"  style="height:500px;">
+        <div class="box box-default table-box table-responsive mdl-shadow--2dp" style="height:500px;">
             <table class="mdl-data-table table-bordered table-striped cf no-margin">
                 <thead>
                     <tr>
@@ -224,7 +231,7 @@
                         <td *ngIf=' item.estado ==="007" && item.pendingDelete ==="N"' class="mdl-data-table__cell--non-numeric">{{item.Id}}<a style="font-size: 11px;color: red;"> (***)</a></td>
                         <td *ngIf=' item.estado ==="000" && item.pendingDelete ==="Y" ' class="mdl-data-table__cell--non-numeric">{{item.Id}}<a style="font-size: 11px;color: red;"> (R)</a></td>
                         <td *ngIf=' item.estado ==="000" && item.pendingDelete ==="N" ' class="mdl-data-table__cell--non-numeric">{{item.Id}}<a style="font-size: 11px;color: red;"> (R)</a></td>
-                         <td *ngIf=' item.estado ==="010" && item.pendingDelete ==="Y" ' class="mdl-data-table__cell--non-numeric">{{item.Id}}<a style="font-size: 11px;color: red;"> (Ar)</a></td>
+                        <td *ngIf=' item.estado ==="010" && item.pendingDelete ==="Y" ' class="mdl-data-table__cell--non-numeric">{{item.Id}}<a style="font-size: 11px;color: red;"> (Ar)</a></td>
                         <td *ngIf=' item.estado ==="010" && item.pendingDelete ==="N" ' class="mdl-data-table__cell--non-numeric">{{item.Id}}<a style="font-size: 11px;color: red;"> (Ar)</a></td>
                         <td *ngIf='item.estado ==="008" && item.pendingDelete ==="N"' class="mdl-data-table__cell--non-numeric">{{item.Id}}</td>
                         <td class="mdl-data-table__cell--non-numeric">{{item.Descripcion}}</td>
@@ -240,7 +247,7 @@
         </div>
     </div>
     <div class="col-xl-12" *ngIf="btn === 'lectura' ">
-        <div class="box box-default table-box table-responsive mdl-shadow--2dp"  style="height:500px;">
+        <div class="box box-default table-box table-responsive mdl-shadow--2dp" style="height:500px;">
             <table class="mdl-data-table table-bordered table-striped cf no-margin">
                 <thead>
                     <tr>
