--- a/src/app/componentes/rkmain/addrkd/addrkd.component.html
+++ b/src/app/componentes/rkmain/addrkd/addrkd.component.html
@@ -1,18 +1,19 @@
-<h1 mat-dialog-title cdkDrag cdkDragRootElement=".cdk-overlay-pane" cdkDragHandle>{{ data.title }}</h1>
-<form name="rkd_form" class="form-validation" (ngSubmit)="!dimensionControl.hasError('required') && rkdForm.form.valid && guardar()" #rkdForm="ngForm" noValidate>
+<h1 mat-dialog-title cdkDrag cdkDragRootElement=".cdk-overlay-pane" cdkDragHandle>
+
+    {{ data.title }}</h1>
+<form name="rka_form" class="form-validation" (ngSubmit)="!dimensionControl.hasError('required') && rkaForm.form.valid && guardar()" #rkaForm="ngForm" noValidate>
     <div class="row">
         <div class="col-xl-7">
             <mat-form-field>
+                <mat-select [formControl]="dimensionControl" [(ngModel)]="dimensionModel.dimensionId" #areaId placeholder="Seleccione una Dimension" #dimensionId multiple>
+
+                    <ngx-mat-select-search [formControl]="bankMultiFilterCtrl" [placeholderLabel]="'Buscar'" [noEntriesFoundLabel]="'Not Found...'" [(ngModel)]="descripcion" name="descripcion"></ngx-mat-select-search>
 
 
-                <mat-label>Seleccione una Dimensión</mat-label>
-
-                <mat-select [formControl]="dimensionControl" required [(ngModel)]="dimensionModel.dimensionId" #dimensionId multiple>
-                    <!-- <input  matInput focused="'true'"  (keydown)="Buscar($event)" type="text" [(ngModel)]="dimensionModel.name" value={{dimensionModel.name}} name='name' placeholder="search"> -->
-                    <input type="text" class="form-control" placeholder="Buscar" [(ngModel)]="descripcion" name="descripcion">
-                    <mat-option *ngFor="let item of dimensionesList| filterPipe:descripcion " (keydown)="$event.stopPropagation()" [value]="item.Id">{{item.Descripcion}}</mat-option>
+                    <mat-option *ngFor="let item of dimensionesList | filterPipe:descripcion" [value]="item.Id">
+                        {{item.Descripcion}}
+                    </mat-option>
                 </mat-select>
-                <!-- <mat-error *ngIf="dimensionControl.hasError('required')">No ha seleccionado una Dimensión</mat-error> -->
             </mat-form-field>
         </div>
     </div>
