--- a/src/app/componentes/rkmain/addrkd/addrkd.component.scss
+++ b/src/app/componentes/rkmain/addrkd/addrkd.component.scss
@@ -1,61 +1,44 @@
-::-webkit-input-placeholder { /* Safari y Chrome */
-   color:  rgb(17, 7, 7); 
-   text-align: left;
-   text-decoration: underline;
-   margin-left: 30px !important; 
+::-webkit-input-placeholder {
+    /* Safari y Chrome */
+    color: rgb(17, 7, 7);
+    text-align: left;
+    text-decoration: underline;
+    margin-left: 30px !important;
+    font-family: 'Open Sans', Arial, Helvetica, sans-serif;
 }
- 
-:-moz-placeholder { /* Firefox hasta v18 */
-   color: rgb(17, 7, 7); 
-   text-align: left ;
-   text-decoration: underline;
-   margin-left: 30px !important;
-}  
- 
-::-moz-placeholder {  /* Firefox 19+ */
-   color: rgb(17, 7, 7); 
-   text-align: left;
-   text-decoration: underline;
-   margin-left: 30px !important;
+
+ :-moz-placeholder {
+    /* Firefox hasta v18 */
+    color: rgb(17, 7, 7);
+    text-align: left;
+    text-decoration: underline;
+    margin-left: 30px !important;
+    font-family: 'Open Sans', Arial, Helvetica, sans-serif;
 }
- 
-:-ms-input-placeholder {  /* IE 10+´*/
-   color: rgb(17, 7, 7); 
-   text-align: left;
-   text-decoration: underline;
-   margin-left: 30px !important;
+
+ ::-moz-placeholder {
+    /* Firefox 19+ */
+    color: rgb(17, 7, 7);
+    text-align: left;
+    text-decoration: underline;
+    margin-left: 30px !important;
+    font-family: 'Open Sans', Arial, Helvetica, sans-serif;
+}
+
+ :-ms-input-placeholder {
+    /* IE 10+´*/
+    color: rgb(17, 7, 7);
+    text-align: left;
+    text-decoration: underline;
+    margin-left: 30px !important;
+    font-family: 'Open Sans', Arial, Helvetica, sans-serif;
+}
+
+h4 {
+    font-family: 'collahuasi';
 }
 
 .mat-input-element {
-
-   font: inherit;
-   background: 0 0;
-   color: currentColor;
-   border: 1px solid black;
-   outline: 0;
-   padding: 0;
-   margin: 0;
-   width: 100%;
-   max-width: 100%;
-   vertical-align: bottom;
-   text-align: left;
-   padding-left: 10px;
-}.mat-input-element {
-
-   font: inherit;
-   background: 0 0;
-   color: currentColor;
-   border: 1px solid black;
-   outline: 0;
-   padding: 0;
-   margin: 0;
-   width: 100%;
-   max-width: 100%;
-   vertical-align: bottom;
-   text-align: left;
-   padding-left: 10px;
-}.mat-input-element {
-
     font: inherit;
     background: 0 0;
     color: currentColor;
@@ -68,233 +51,23 @@
     vertical-align: bottom;
     text-align: left;
     padding-left: 10px;
-}.mat-input-element {
-
-    font: inherit;
-    background: 0 0;
-    color: currentColor;
-    border: 1px solid black;
-    outline: 0;
-    padding: 0;
-    margin: 0;
-    width: 100%;
-    max-width: 100%;
-    vertical-align: bottom;
-    text-align: left;
-    padding-left: 10px;
-}.mat-input-element {
-
-    font: inherit;
-    background: 0 0;
-    color: currentColor;
-    border: 1px solid black;
-    outline: 0;
-    padding: 0;
-    margin: 0;
-    width: 100%;
-    max-width: 100%;
-    vertical-align: bottom;
-    text-align: left;
-    padding-left: 10px;
-}.mat-input-element {
-
-    font: inherit;
-    background: 0 0;
-    color: currentColor;
-    border: 1px solid black;
-    outline: 0;
-    padding: 0;
-    margin: 0;
-    width: 100%;
-    max-width: 100%;
-    vertical-align: bottom;
-    text-align: left;
-    padding-left: 10px;
-}.mat-input-element {
-
-    font: inherit;
-    background: 0 0;
-    color: currentColor;
-    border: 1px solid black;
-    outline: 0;
-    padding: 0;
-    margin: 0;
-    width: 100%;
-    max-width: 100%;
-    vertical-align: bottom;
-    text-align: left;
-    padding-left: 10px;
-}.mat-input-element {
-
-    font: inherit;
-    background: 0 0;
-    color: currentColor;
-    border: 1px solid black;
-    outline: 0;
-    padding: 0;
-    margin: 0;
-    width: 100%;
-    max-width: 100%;
-    vertical-align: bottom;
-    text-align: left;
-    padding-left: 10px;
-}.mat-input-element {
-
-    font: inherit;
-    background: 0 0;
-    color: currentColor;
-    border: 1px solid black;
-    outline: 0;
-    padding: 0;
-    margin: 0;
-    width: 100%;
-    max-width: 100%;
-    vertical-align: bottom;
-    text-align: left;
-    padding-left: 10px;
-}.mat-input-element {
-
-    font: inherit;
-    background: 0 0;
-    color: currentColor;
-    border: 1px solid black;
-    outline: 0;
-    padding: 0;
-    margin: 0;
-    width: 100%;
-    max-width: 100%;
-    vertical-align: bottom;
-    text-align: left;
-    padding-left: 10px;
-}.mat-input-element {
-
-    font: inherit;
-    background: 0 0;
-    color: currentColor;
-    border: 1px solid black;
-    outline: 0;
-    padding: 0;
-    margin: 0;
-    width: 100%;
-    max-width: 100%;
-    vertical-align: bottom;
-    text-align: left;
-    padding-left: 10px;
-}.mat-input-element {
-
-    font: inherit;
-    background: 0 0;
-    color: currentColor;
-    border: 1px solid black;
-    outline: 0;
-    padding: 0;
-    margin: 0;
-    width: 100%;
-    max-width: 100%;
-    vertical-align: bottom;
-    text-align: left;
-    padding-left: 10px;
-}.mat-input-element {
-
-    font: inherit;
-    background: 0 0;
-    color: currentColor;
-    border: 1px solid black;
-    outline: 0;
-    padding: 0;
-    margin: 0;
-    width: 100%;
-    max-width: 100%;
-    vertical-align: bottom;
-    text-align: left;
-    padding-left: 10px;
-}.mat-input-element {
-
-    font: inherit;
-    background: 0 0;
-    color: currentColor;
-    border: 1px solid black;
-    outline: 0;
-    padding: 0;
-    margin: 0;
-    width: 100%;
-    max-width: 100%;
-    vertical-align: bottom;
-    text-align: left;
-    padding-left: 10px;
-}.mat-input-element {
-
-    font: inherit;
-    background: 0 0;
-    color: currentColor;
-    border: 1px solid black;
-    outline: 0;
-    padding: 0;
-    margin: 0;
-    width: 100%;
-    max-width: 100%;
-    vertical-align: bottom;
-    text-align: left;
-    padding-left: 10px;
-}.mat-input-element {
-
-    font: inherit;
-    background: 0 0;
-    color: currentColor;
-    border: 1px solid black;
-    outline: 0;
-    padding: 0;
-    margin: 0;
-    width: 100%;
-    max-width: 100%;
-    vertical-align: bottom;
-    text-align: left;
-    padding-left: 10px;
-}.mat-input-element {
-
-    font: inherit;
-    background: 0 0;
-    color: currentColor;
-    border: 1px solid black;
-    outline: 0;
-    padding: 0;
-    margin: 0;
-    width: 100%;
-    max-width: 100%;
-    vertical-align: bottom;
-    text-align: left;
-    padding-left: 10px;
-}.mat-input-element {
-
-    font: inherit;
-    background: 0 0;
-    color: currentColor;
-    border: 1px solid black;
-    outline: 0;
-    padding: 0;
-    margin: 0;
-    width: 100%;
-    max-width: 100%;
-    vertical-align: bottom;
-    text-align: left;
-    padding-left: 10px;
-}.mat-input-element {
-
-    font: inherit;
-    background: 0 0;
-    color: currentColor;
-    border: 1px solid black;
-    outline: 0;
-    padding: 0;
-    margin: 0;
-    width: 100%;
-    max-width: 100%;
-    vertical-align: bottom;
-    text-align: left;
-    padding-left: 10px;
+    font-family: 'Open Sans', Arial, Helvetica, sans-serif;
 }
 
-
-  h1{
+h1 {
     font-family: 'Open Sans', Arial, Helvetica, sans-serif;
- }
+}
+
+mat-label {
+    font-family: 'Open Sans', Arial, Helvetica, sans-serif;
+}
+
+.mat-dialog-actions {
+    // ...
+    &[align='end'] {
+        justify-content: flex-end;
+    }
+    &[align='center'] {
+        justify-content: center;
+    }
+}
